--- a/index.html
+++ b/index.html
@@ -1,71 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Open Weather API</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1>Happy Weather App</h1>
-        <form>
-            <input type="search" name="search" id="searchField">
-            <p>🔍</p>
-        </form>
+      <h1>Happy Weather App</h1>
+      <form>
+        <input type="search" name="search" id="searchField" />
+        <p>🔍</p>
+      </form>
     </header>
 
     <main>
-        <section id="mainInfo">
-            <h2 id="cityName"></h2>
-            <div>
-                <img src="" alt="">
-                <p id="temperature"></p>
-            </div>
-            <p id="basicWeatherInfo"></p>
-            <p id="dateInfo"></p>
-        </section>
-        <section id="detailInfo">
-            <div id="localTime">
-                <div></div>
-                <div></div>
-            </div>
-            <div id="wind">
-                <div></div>
-                <div></div>
-            </div>
-            <div id="cloudiness">
-                <div></div>
-                <div></div>
-            </div>
-            <div id="pressure">
-                <div></div>
-                <div></div>
-            </div>
-            <div id="humidity">
-                <div></div>
-                <div></div>
-            </div>
-            <div id="sunrise">
-                <div></div>
-                <div></div>
-            </div>
-            <div id="sunset">
-                <div></div>
-                <div></div>
-            </div>
-            <div id="geoCoords">
-                <div></div>
-                <div></div>
-            </div>
-        </section>
-
-
+      <section id="mainInfo">
+        <h2 id="cityName"></h2>
+        <div>
+          <img src="" alt="" />
+          <p id="temperature"></p>
+        </div>
+        <p id="basicWeatherInfo"></p>
+        <p id="dateInfo"></p>
+      </section>
+      <section id="detailInfo">
+        <div id="localTime">
+          <div></div>
+          <div></div>
+        </div>
+        <div id="wind">
+          <div></div>
+          <div></div>
+        </div>
+        <div id="cloudiness">
+          <div></div>
+          <div></div>
+        </div>
+        <div id="pressure">
+          <div></div>
+          <div></div>
+        </div>
+        <div id="humidity">
+          <div></div>
+          <div></div>
+        </div>
+        <div id="sunrise">
+          <div></div>
+          <div></div>
+        </div>
+        <div id="sunset">
+          <div></div>
+          <div></div>
+        </div>
+        <div id="geoCoords">
+          <div></div>
+          <div></div>
+        </div>
+      </section>
     </main>
     <script src="assets/js/script.js"></script>
-</body>
-
+  </body>
 </html>
