inhalte aus api abgerufen

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <section id="mainInfo">
         <h2 id="cityName"></h2>
         <div>
-          <img src="" alt="" />
+          <img id="mainIcon" src="" alt="" />
           <p id="temperature"></p>
         </div>
         <p id="basicWeatherInfo"></p>
@@ -29,35 +29,35 @@
       </section>
       <section id="detailInfo">
         <div id="localTime">
-          <div>Time</div>
+          <div class="detailHeader">Uhrzeit</div>
           <div class="value"></div>
         </div>
         <div id="wind">
-          <div>Wind</div>
+          <div class="detailHeader">Wind</div>
           <div class="value"></div>
         </div>
         <div id="cloudiness">
-          <div></div>
+          <div class="detailHeader">Wolken</div>
           <div class="value"></div>
         </div>
         <div id="pressure">
-          <div></div>
+          <div class="detailHeader">Luftdruck</div>
           <div class="value"></div>
         </div>
         <div id="humidity">
-          <div></div>
+          <div class="detailHeader">Luftfeuchtigkeit</div>
           <div class="value"></div>
         </div>
         <div id="sunrise">
-          <div></div>
+          <div class="detailHeader">Sonnenaufgang</div>
           <div class="value"></div>
         </div>
         <div id="sunset">
-          <div></div>
+          <div class="detailHeader">Sonnenuntergang</div>
           <div class="value"></div>
         </div>
         <div id="geoCoords">
-          <div></div>
+          <div class="detailHeader">Koordinaten</div>
           <div class="value"></div>
         </div>
       </section>
