One translation was missing in HTML

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <div class="value"></div>
       </div>
       <div id="pressure">
-        <div class="detailHeader">Luftdruck</div>
+        <div class="detailHeader">Pressure</div>
         <div class="value"></div>
       </div>
       <div id="humidity">
-        <div class="detailHeader">Pressure</div>
+        <div class="detailHeader">Humidity</div>
         <div class="value"></div>
       </div>
       <div id="sunrise">
