css first steps

--- a/index.html
+++ b/index.html
@@ -37,27 +37,27 @@
           <div class="value"></div>
         </div>
         <div id="cloudiness">
-          <div></div>
+          <div>Test</div>
           <div class="value"></div>
         </div>
         <div id="pressure">
-          <div></div>
+          <div>Test</div>
           <div class="value"></div>
         </div>
         <div id="humidity">
-          <div></div>
+          <div>Test</div>
           <div class="value"></div>
         </div>
         <div id="sunrise">
-          <div></div>
+          <div>Test</div>
           <div class="value"></div>
         </div>
         <div id="sunset">
-          <div></div>
+          <div>Test</div>
           <div class="value"></div>
         </div>
         <div id="geoCoords">
-          <div></div>
+          <div>Test</div>
           <div class="value"></div>
         </div>
       </section>
