--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
         App
       </h1>
       <form>
-        <input type="search" name="search" id="searchField" />
-        <button>   <img src="/assets/img/lupe.png" alt="lupe"> </button>
-       
+        <input
+          type="search"
+          name="search"
+          id="searchField"
+          placeholder="Gib deine Stadt ein"
+        />
+        <button><img src="/assets/img/lupe.png" alt="lupe" /></button>
       </form>
     </header>
 
