--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
       <button>🔍</button>
     </form>
   </header>
+  
 
   <main>
     <section id="mainInfo">
       <h2 id="cityName"></h2>
       <div>
-        <img id="mainIcon" src="" alt="" />
+        <div id="lottie-container"></div>
+               <!-- <img id="mainIcon" src="" alt="" /> -->
         <p id="temperature"></p>
       </div>
       <p id="basicWeatherInfo"></p>
@@ -64,6 +66,7 @@
     </section>
   </main>
   <script src="assets/js/script.js"></script>
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </body>
 
 </html>
