--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   </header>
 
   <main>
+    <section id="frog-container">
+      <lottie-player src="https://assets2.lottiefiles.com/datafiles/J2NYjLn3cvpuAzo/data.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+    </section>
     <section id="grid">
       <section id="mainInfo">
         <div id="lottie-container"></div>
